syntax = "proto3";

package hello;

service Hello {
	rpc SayHello(HelloRequest) returns (HelloResponse) {}
	rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse){}
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
    string message = 1;
}
